Responsive issue in Share Leads module & table double border issues are resolved.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2352,3 +2352,8 @@ button.table-scbscribe-btn:hover {
   display: none !important;
 }
 .video-js.vjs-http-source-selector{display:block}
+
+/* Sort By box paddings */
+select.form-control.SeclectBoxPaddingsAbj {
+  padding: 6px 4px;
+}
